Mobius Forensic Toolkit 2.19
	* docs: Create directory for consolidated documentation
	* Compatible with Python v3.13
	* Compatible with GCC v15.1.1
	* Created new resource folder data/profiles
	* evidence-viewer: Added new items' status tableview
	* evidence-viewer: Added new profile combobox
	* evidence-viewer: Added new processing status tableview
	* app-chromium: Changed file_cookies module to handle Cookies files v17
	* app-chromium: Added new class vfs_processor_impl 
	* app-chromium: Removed class evidence_loader_impl
	* app-emule: Removed unnecessary [[fallthrough]] attributes from ctag module
	* libmobius_core: Added new method decoder::inifile::get_value (with default value)
	* libmobius_core: Added new method decoder::inifile::get_values
	* libmobius_core: Added new method decoder::inifile::set_value_char
	* libmobius_core: Added necessary include to the io::uri component
	* libmobius_core: Added necessary include to the io::walker component
	* libmobius_core: Added necessary include to the mediator component
	* libmobius_core: Removed inheritance from std::iterator in the pod::map component
	* libmobius_core: Removed unnecessary [[fallthrough]] attributes from vfs::tsk::fs_file module
	* libmobius_core: Removed memset use from vfs::tsk::adaptor class
	* libmobius_core: Changed ui::box::operator widget to as_widget()
	* libmobius_core: Changed ui::button::operator widget to as_widget()
	* libmobius_core: Changed ui::icon::operator widget to as_widget()
	* libmobius_core: Changed ui::label::operator widget to as_widget()
	* libmobius_core: Changed datasource::ufdr::datasource::operator datasource to as_datasource()
	* libmobius_framework: Added new class case_profile
	* libmobius_framework: Added new function list_case_profiles
	* libmobius_framework: Added new class vfs_processor_impl_base
	* libmobius_framework: Added new class ant_impl_vfs_processor
	* libmobius_framework: Added new class vfs_processor